# api/swagger/swagger.yaml
@@ -28,6 +28,63 @@ paths:
             $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
+  /backup:
+    x-swagger-router-controller: backup
+    get:
+      description: Retrieve list of backups
+      operationId: getAll
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/AllBackupsResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Create backup
+      operationId: create
+      parameters:
+        - name: type
+          description: Backup file to retrieve
+          required: false
+          type: string
+          enum:
+            - database
+            - module
+            - war
+            - bundle
+          in: query
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"    
+  /backup/{filename}:
+    x-swagger-router-controller: backup
+    get:
+      description: Retrieve backup file
+      operationId: get
+      parameters:
+        - name: filename
+          description: Backup file to retrieve
+          required: true
+          type: string
+          in: path
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: file
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 definitions:
   AboutResponse:
     type: object
@@ -47,7 +104,27 @@ definitions:
             type: string
           email:
             type: string
+  AllBackupsResponse:
+    type: object
+    properties:
+      database:
+        type: array
+        items:
+          type: object
+          properties:
+            filename:
+              type: string
+            size:
+              type: number
+            created:
+              type: string
   ErrorResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  SuccessResponse:
     required:
       - message
     properties:
